Bug 1684893 - Stop allocating an autoreleased NSArray from a C++ static initializer for filteredProviderNames. r=jrmuizel

There is no autorelease pool in place at the time that C++ globals are initialized, so this array
causes warnings when running with `OBJC_DEBUG_MISSING_POOLS=YES LIBDISPATCH_DEBUG_MISSING_POOLS=NO`.
And avoiding static initializers is a good practice anyway.

Differential Revision: https://phabricator.services.mozilla.com/D100734